[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
base16 = { version = "0.2", default-features = false, features = ["alloc"] }
ed25519 = { version = "2.0.1", default-features = false}
ed25519-dalek = { version = "1.0.1", default-features = false}

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
lto = true
