[package]
name = "sigver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = { version = "0.2", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
secp256k1 = { version = "0.26.0", default-features = false, features = ["alloc","bitcoin-hashes","rand","recovery"] }
ed25519 = { version = "2.0.1", default-features = false}
ed25519-dalek = { version = "1.0.1", default-features = false}